--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">S032302</string>
+    <string-array name="fruits">
+        <item>apple</item>
+        <item>banana</item>
+        <item>lemon</item>
+        <item>strawberry</item>
+    </string-array>
 </resources>
